--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=323
-dock_hsplit_3=-353
+dock_hsplit_2=267
+dock_hsplit_3=-420
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Beginner/01-Movement/Scenes/01MovementScene.tscn"]
+open_scenes=["res://Beginner/01-Movement/Scenes/01MovementScene.tscn", "res://Beginner/01-Movement-Base/Scenes/01MovementScene.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Beginner/01-Movement/Code/GDScript/MovementInput.gd"]
+open_scripts=["res://Beginner/01-Movement/Code/GDScript/PlayerMovement.gd"]
 open_help=[]
-script_split_offset=70
+script_split_offset=171
 list_split_offset=0
