Implementing Raycasting part 2.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=[{
-"base": "StaticBody3D",
+"base": "Node",
+"class": &"Damageable",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Beginner/05-Raycasting-Part2/Code/GDScript/Damageable.gd"
+}, {
+"base": "Node",
 "class": &"TargetController",
 "icon": "",
 "language": &"GDScript",
