--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=309
-dock_hsplit_3=-525
+dock_hsplit_2=348
+dock_hsplit_3=-464
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Beginner/04-Materials/Scenes/04Materialscene.tscn"]
+open_scenes=["res://Beginner/05-Raycasting-Part2/Scenes/05RaycastingScene.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Beginner/05-Raycasting-Part2/Code/GDScript/BlasterController.gd", "res://Beginner/03-Raycasting/Code/GDScript/CameraPivot.gd", "res://Beginner/02-CreationandDeletion/Code/GDScript/Spawner.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/TargetController.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/TimerRemoval.gd"]
-open_help=["Object"]
+open_scripts=["res://Beginner/05-Raycasting-Part2/Code/GDScript/BlasterController.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/Damageable.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/TimerRemoval.gd"]
+open_help=[]
 script_split_offset=171
 list_split_offset=0
