Updated for tutorial 6, Tweening.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=348
-dock_hsplit_3=-464
+dock_hsplit_2=327
+dock_hsplit_3=-529
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Beginner/05-Raycasting-Part2/Scenes/05RaycastingScene.tscn"]
+open_scenes=["res://Beginner/06-Tweening/Scenes/06TweeningScene.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Beginner/05-Raycasting-Part2/Code/GDScript/BlasterController.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/Damageable.gd", "res://Beginner/05-Raycasting-Part2/Code/GDScript/TimerRemoval.gd"]
+open_scripts=["res://Beginner/05-Raycasting-Part2/Code/GDScript/DamageableNode.gd", "res://Beginner/06-Tweening/Code/GDScript/DamageableTweeningNode.gd"]
 open_help=[]
 script_split_offset=171
 list_split_offset=0
