--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,9 @@
 list=[{
 "base": "Node",
-"class": &"Damageable",
+"class": &"DamageableNode",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Beginner/05-Raycasting-Part2/Code/GDScript/Damageable.gd"
+"path": "res://Beginner/05-Raycasting-Part2/Code/GDScript/DamageableNode.gd"
 }, {
 "base": "Node",
 "class": &"TargetController",
