--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -81,30 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 6,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Beginner/05-Raycasting-Part2/Code/GDScript/Damageable.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": [],
-"h_scroll_position": 0,
-"row": 1,
+"row": 7,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 11,
-"selection_from_line": 1,
-"selection_to_column": 21,
-"selection_to_line": 1,
+"selection_from_column": 6,
+"selection_from_line": 7,
+"selection_to_column": 41,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
 
@@ -113,11 +99,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 107,
+"column": 6,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 4.0,
+"row": 26,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/05-Raycasting-Part2/Code/GDScript/DamageableNode.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 14,
+"selection_to_column": 47,
+"selection_to_line": 14,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/06-Tweening/Code/GDScript/DamageableTweeningNode.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 80,
+"scroll_position": 59.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
