Updated for episode 8 of the tutorial series. Groups and Signals.

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -135,7 +135,35 @@ state={
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 35,
-"scroll_position": 11.0,
+"scroll_position": 8.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/08-Groups-Signals/Code/GDScript/PointsContainer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/08-Groups-Signals/Code/GDScript/DamageableEventNode.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 6,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 104,
+"scroll_position": 86.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
