Update for episode 10

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -53,10 +53,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -103,16 +103,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": [],
+"column": 0,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 1,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 14,
-"selection_to_column": 47,
-"selection_to_line": 14,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 25,
+"selection_to_line": 1,
 "syntax_highlighter": "GDScript"
 }
 
@@ -135,12 +135,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": [],
+"column": 0,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 8.0,
-"selection": false,
+"row": 46,
+"scroll_position": 25.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 46,
+"selection_to_column": 20,
+"selection_to_line": 48,
 "syntax_highlighter": "GDScript"
 }
 
@@ -205,11 +209,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 8.0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 33,
+"selection_to_line": 1,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/10-AI2-Detection/Code/GDScript/PlayerDetectionControl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/10-AI2-Detection/Code/GDScript/DetectionControl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
