--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,18 @@ list=Array[Dictionary]([{
 "path": "res://Beginner/05-Raycasting-Part2/Code/GDScript/DamageableNode.gd"
 }, {
 "base": &"Node",
+"class": &"DetectionControl",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Beginner/10-AI2-Detection/Code/GDScript/DetectionControl.gd"
+}, {
+"base": &"Node3D",
+"class": &"EnemyNavigationControl",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Beginner/09-AI1-Navigation/Code/GDScript/EnemyNavigationControl.gd"
+}, {
+"base": &"Node",
 "class": &"TargetController",
 "icon": "",
 "language": &"GDScript",
