Made changes for the 12 AI 04 projectile code, also added a gitignore to remove .godot and .vs from updates.

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -55,7 +55,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 54,
 "row": 14,
 "scroll_position": 0.0,
 "selection": false,
@@ -169,9 +169,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 3,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 54,
-"scroll_position": 43.0,
+"h_scroll_position": 75,
+"row": 42,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -209,16 +209,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 1,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 1,
-"selection_to_column": 33,
-"selection_to_line": 1,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -227,10 +223,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -241,10 +237,60 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 1,
+"selection_to_column": 27,
+"selection_to_line": 1,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/11-AI3-DecisionMaking/Code/GDScript/EnemyCoreControl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 1,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 27,
+"selection_to_line": 1,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyCombatControl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 42,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyProjectileControl.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
