--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -12,10 +12,22 @@ list=Array[Dictionary]([{
 "path": "res://Beginner/10-AI2-Detection/Code/GDScript/DetectionControl.gd"
 }, {
 "base": &"Node3D",
+"class": &"EnemyCoreControl",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Beginner/11-AI3-DecisionMaking/Code/GDScript/EnemyCoreControl.gd"
+}, {
+"base": &"Node3D",
 "class": &"EnemyNavigationControl",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Beginner/09-AI1-Navigation/Code/GDScript/EnemyNavigationControl.gd"
+}, {
+"base": &"Node3D",
+"class": &"EnemyProjectileControl",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyProjectileControl.gd"
 }, {
 "base": &"Node",
 "class": &"TargetController",
