--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=362
-dock_hsplit_3=-606
+dock_hsplit_3=-601
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Beginner/10-AI2-Detection/Scenes/10AI02DetectionScene.tscn"]
+open_scenes=["res://Beginner/12-AI4-Attacking/Scenes/Projectile.tscn", "res://Beginner/12-AI4-Attacking/Scenes/12AI04AttackingScene.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Beginner/10-AI2-Detection/Code/GDScript/DetectionControl.gd", "res://Beginner/09-AI1-Navigation/Code/GDScript/EnemyNavigationControl.gd", "res://Universal/Code/Helpers/MouseLock.gd", "res://Beginner/10-AI2-Detection/Code/GDScript/PlayerDetectionControl.gd"]
+open_scripts=["res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyCombatControl.gd", "res://Beginner/11-AI3-DecisionMaking/Code/GDScript/EnemyCoreControl.gd", "res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyProjectileControl.gd", "res://Universal/Code/Helpers/MouseLock.gd"]
 open_help=[]
-script_split_offset=171
+script_split_offset=210
 list_split_offset=0
