Tutorial episode 13 update added.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=362
-dock_hsplit_3=-601
+dock_hsplit_2=378
+dock_hsplit_3=-504
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Beginner/12-AI4-Attacking/Scenes/Projectile.tscn", "res://Beginner/12-AI4-Attacking/Scenes/12AI04AttackingScene.tscn"]
+open_scenes=["res://Beginner/13-AI5-NpcDamaging/Scenes/13AI05DamagingScene.tscn", "res://Beginner/13-AI5-NpcDamaging/Scenes/Projectile.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyCombatControl.gd", "res://Beginner/11-AI3-DecisionMaking/Code/GDScript/EnemyCoreControl.gd", "res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyProjectileControl.gd", "res://Universal/Code/Helpers/MouseLock.gd"]
+open_scripts=["res://Beginner/08-Groups-Signals/Code/GDScript/DamageableEventNode.gd", "res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyCombatControl.gd", "res://Beginner/12-AI4-Attacking/Code/GDScript/EnemyProjectileControl.gd", "res://Universal/Code/Helpers/MouseLock.gd", "res://Beginner/13-AI5-NpcDamaging/Code/GDScript/ProjectileCollision.gd"]
 open_help=[]
-script_split_offset=210
+script_split_offset=150
 list_split_offset=0
