--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -55,7 +55,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 54,
+"h_scroll_position": 0,
 "row": 14,
 "scroll_position": 0.0,
 "selection": false,
@@ -103,16 +103,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 4,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 1,
-"selection_to_column": 25,
-"selection_to_line": 1,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -167,11 +163,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 62,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 75,
-"row": 42,
-"scroll_position": 42.0,
+"h_scroll_position": 0,
+"row": 107,
+"scroll_position": 88.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -273,11 +269,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 4.0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -287,10 +283,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Beginner/13-AI5-NpcDamaging/Code/GDScript/ProjectileCollision.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
